<resources>
    <string name="app_name">FLÜ-TRANINER</string>

    <string-array name="questionarys_array">
        <item>Standard</item>
        <item>Bronze</item>
        <item>Silber</item>
        <item>Gold</item>
    </string-array>

    <string name="categoryAtemschutz">Atemschutz</string>
    <string name="categoryBelastung">Belastung</string>
    <string name="categoryBrennen">Brennen</string>
    <string name="categoryBrandsicherheitsdienst">Brandsicherheitsdienst</string>
    <string name="categoryErsteHilfe">Erste Hilfe</string>
    <string name="categoryFahrzeugkunde">Fahrzeugkunde</string>
    <string name="categoryGefahrstoffe">Gefahrstoffe</string>
    <string name="categoryGeraeteTh">Geräte TH</string>
    <string name="categoryHygiene">Hygiene</string>
    <string name="categoryKatastrophenschutz">Katastrophenschutz</string>
    <string name="categoryLoescheinsatz">Löscheinsatz</string>
    <string name="categoryLoeschen">Löschen</string>
    <string name="categoryPSA">PSA</string>
    <string name="categoryRechtsgrundlagen">Rechtsgrundlagen</string>
    <string name="categoryRettung">Rettung</string>
    <string name="categoryRettungsgeraete">Rettungsgeräte</string>
    <string name="categorySonstigeGeraete">Sonstige Geräte</string>
    <string name="categorySprechfunk">Sprechfunk</string>
    <string name="categoryTechnischeHilfeleistung">Techn. Hilfeleistung</string>
    <string name="categoryUVV">UVV</string>
    <string name="categoryVerhaltenBeiGefahr">Verhalten bei Gefahr</string>
    <string name="categoryWasserfoerderung">Wasserförderung</string>
    <string name="categoryZivilschutz">Zivilschutz</string>
    <string name="categoryBronze">Bronze</string>
    <string name="categorySilber">Silber</string>
    <string name="categoryGold">Gold</string>
    <string name="categoryGrundbogen">Grund</string>


    <string name="showErrors">Fehler sofort anzeigen</string>
    <string name="hideErrors">Fehler am Ende anzeigen</string>
    <string name="chooseCategorys">Kategorien auswählen</string>

    <string name="start">Start</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
